# astaire

./: .gitignore  .gitmodules  CLAUDE.md  README.md  governance.yaml  log.md  pyproject.toml
.astaire/: .gitignore  uv
benchmarks/: bench_context.py
docs/benchmarks/: v0.6.0-ai-dev-governance.md
docs/diagrams/: architecture_comparison.mermaid  claim_lifecycle.mermaid  erd_schema.mermaid  query_projection_flow.mermaid  schema_class_diagram.mermaid  system_architecture.mermaid
docs/guides/: ai-dev-governance-integration.md  collection-authoring.md
docs/schema/: memory_palace_schema.sql
src/: __main__.py  cli.py  db.py  export.py  governance.py  ingest.py  ingest_graphify.py  lint.py  project.py  prune.py  registry.py  routing.py
src/collections/: ai_dev_governance.py  discovery.py  governance_authoring.py  graphify_outputs.py
src/utils/: hashing.py  tokens.py  ulid.py
tests/: conftest.py  test_benchmarks.py  test_cli.py  test_collections.py  test_db.py  test_discovery.py  test_export.py  test_governance.py  test_governance_authoring.py  test_graphify_outputs.py  test_ingest.py  test_ingest_graphify.py  test_lint.py  test_project.py  test_prune.py  test_registry.py  test_routing.py  test_utils.py
tests/fixtures/: routing_hints.md
