[project]
name = "astaire"
version = "0.2.2"
description = "Hybrid memory palace — structured knowledge store for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "tiktoken>=0.12.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Text Processing :: Indexing",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
astaire = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
